# soundsense-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  about_channel_setting.md  build.rs  filetotriggeractionplsignore
.github/workflows/: build.yml  create_release.yml  publish.yml  release.yml
ci/: before_deploy.bash
icons/: icon.icns
soundpacks/: autoUpdater.xml
soundpacks/adventurer/: actions.xml  adventurer.xml  ambush.xml  animal_behavior.xml  combat_actions.xml  enviroment.xml  speech.xml  speech_anger.xml  speech_answer.xml  speech_concern.xml  speech_greeting.xml  speech_question.xml
soundpacks/animals/: alpaca.xml  animals.xml  armadillo.xml  buffalo.xml  bugbat.xml  cat.xml  cavy.xml  chicken.xml  dog.xml  duck.xml  goat.xml  goose.xml  guineafowl.xml  llama.xml  octopus.xml  peafowl.xml  pig.xml  rabbit.xml  reindeer.xml  sheep.xml  training.xml  turkey.xml  vermin.xml  yak.xml
soundpacks/animals/beekeeping/: beekeeping.xml
soundpacks/battle/: battle.xml  breath.xml  gore.xml  hitevents.xml  status.xml  strikes.xml
soundpacks/deaths/: directdeaths.xml  founddeaths.xml  slaughtering.xml
soundpacks/default/: customHost.xml  playlist.m3u  playlist.pls  readme.txt  sample.xml
soundpacks/dfhack/: dfhack.xml
soundpacks/emotion/: emotion.xml
soundpacks/emotion/voices/: agree.m3u  anger.m3u  bold.m3u
soundpacks/fishing/: fishing.xml
soundpacks/interactions/: necromancy.xml  vampire.xml  were.xml
soundpacks/intruders/: intruders.xml
soundpacks/mandates/: mandates.xml
soundpacks/mining/: enviromentalHazard.xml  mining.xml
soundpacks/mining/demon/: Scary_Demon_Haunting-Adam_Webb-97651262.txt
soundpacks/moods/: moods.xml
soundpacks/production/: cancelations.xml  foodAndDrinkCancelations.xml  production.xml
soundpacks/seasons/: attribution.txt  seasons.xml
soundpacks/seasons/roguebard/: attribution.txt
soundpacks/seasons/simonswerwer/: attribution.txt
soundpacks/social/: children.xml  missing.xml  social.xml  visitors.xml
soundpacks/system/: system.xml
soundpacks/trading/: trading.xml
soundpacks/weather/: weather.xml
src/: download.rs  main.rs  message.rs  sound.rs  ui.rs
src/sound/: mod.rs  sound_channel.rs  sound_manager.rs
src/ui/: mod.rs  range.css  script.js  style.css
web/: index.html  range-windows-edge.css  range-windows.css  range.css  script-linux.js  script.js  w3.css
(+3 files in other folders)
