[package]
name = "soundsense-rs"
version = "1.4.0"
authors = ["prixt <paraxite@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.iced]
git="https://github.com/hecrj/iced"
rev="95880ca74bddb6a23774621ef766b91956d40a61"
features = ["tokio"]

[dependencies]
notify = "4.0"
regex = {version="1.3", default-features=false, features=["std", "perf"]}
rodio = "0.10"
quick-xml = "0.17"
rand = "0.7"
lazy_static = "1.4"
getopts = "0.2"
hyper = "0.13"
tinyfiledialogs = "3.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
incremental = false