[package]
name = "soundsense-rs"
version = "1.4.1"
build = "build.rs"
authors = ["prixt <paraxite@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
edge = ["web-view/edge"]

[dependencies]
notify = "4.0"
regex = {version="1.3", default-features=false, features=["std", "perf"]}
rodio = "0.10"
quick-xml = "0.17"
rand = "0.7"
lazy_static = "1.4"
web-view = "0.6"
getopts = "0.2"
webbrowser = "0.5.2"
dirs = "2.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
incremental = false