[package]
name = "soundsense-rs"
version = "1.5.1"
build = "build.rs"
authors = ["prixt <paraxite@naver.com>"]
edition = "2018"
description = "A Rusty SoundSense alternative"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
edge = ["web-view/edge"]

[dependencies]
regex = {version="1.3", default-features=false, features=["std", "perf"]}
rodio = {git="https://github.com/RustAudio/rodio", rev="2c7d1716707876aad450949fa9c7d4f3a8c5ea3b"}
quick-xml = "0.17"
rand = "0.7"
lazy_static = "1.4"
crossbeam = "0.7.3"
web-view = "0.6"
getopts = "0.2"
webbrowser = "0.5.2"
dirs = "2.0"
log = "0.4.8"
env_logger = "0.7.1"

[build-dependencies]
winres = "0.1"
html-minifier = "1.1.16"

[profile.dev.package.rodio]
debug-assertions = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
incremental = false
panic = "abort"

[profile.release.build-override]
opt-level = 0

[package.metadata.winres]
LegalCopyright = "© 2019-2020 prixt"